# coder-tools

./: CLAUDE.md  Cargo.toml  FIX.md  README.md
src/: app.rs  budget.rs  claude_session.rs  cost.rs  detector.rs  hooks.rs  main.rs  notify.rs  pricing.rs  resume.rs  sync.rs  tmux.rs  ui.rs
src/providers/: claude.rs  gemini.rs  mod.rs  openai.rs
