[package]
name = "coder-tools"
version = "0.1.1"
edition = "2021"
description = "CLI tools for AI coding assistants - monitor sessions across Claude, OpenAI, Gemini"
license = "MIT"

[[bin]]
name = "coder-tools"
path = "src/main.rs"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"

[profile.release]
lto = true
strip = true
